# slate

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.scratch/: TODO.md  syn-parse-types.txt
apps/hud/: Cargo.toml  README.md
apps/hud/src/: artist.rs  camera.rs  compiler.rs  doodle.rs  hud.rs  input.rs  layer.rs  log.rs  main.rs  script.rs  ui.rs  user.rs  window.rs  workspace.rs
apps/hud/src/device/: device.rs  gamepad.rs  mod.rs  mouse.rs
apps/hud/src/tool/: mod.rs  tool.rs
apps/surface/: Cargo.toml  README.md
apps/surface/.cargo/: config.toml
apps/surface/assets/shaders/: grid.wgsl
apps/surface/scripts/: build.rs
apps/surface/src/: main.rs  relay.rs  surface.rs
apps/surface/src/log/: mod.rs  plugin.rs
benches/: allocation.rs  scaffold.rs
docs/: book.toml
docs/src/: SUMMARY.md  design.md
examples/: alloc.rs  bones.rs  events.rs  styles.rs
macros/chalk/: Cargo.toml
macros/chalk/src/: lib.rs
macros/chizel/: Cargo.toml
macros/chizel/src/: element.rs  lib.rs  styles.rs  uix.rs
macros/chizel/src/util/: parse.rs
runtimes/bevy/: Cargo.toml  README.md
runtimes/bevy/.cargo/: config.toml
runtimes/bevy/examples/: basic.rs  overlay.rs  webview.rs
runtimes/bevy/src/: config.rs  input.rs  lib.rs  log.rs  plugin.rs  provider.rs  reticle.rs  terminal.rs  time.rs  webview.rs  window.rs
runtimes/bevy/src/picking/: mod.rs  ui.rs
runtimes/godot/: Cargo.toml  GodotSlate.gdextension  README.md  project.godot
runtimes/godot/.godot/: extension_list.cfg
runtimes/godot/.godot/editor/: editor_layout.cfg  filesystem_cache8  filesystem_update4  project_metadata.cfg  sandbox.tscn-editstate-b3bbc7bbc8dd38a875b1b90056cee454.cfg  sandbox.tscn-folding-b3bbc7bbc8dd38a875b1b90056cee454.cfg
runtimes/godot/scenes/: sandbox.tscn
runtimes/godot/src/: lib.rs
runtimes/micro/.scratch/: xtensa-backend.txt
runtimes/terminal/: Cargo.toml  README.md
runtimes/terminal/.cargo/: config.toml
runtimes/terminal/examples/: basic.rs
runtimes/terminal/src/: element.rs  event.rs  lib.rs  terminal.rs
runtimes/web/: Cargo.toml  LICENSE_MIT  README.md
runtimes/web/examples/: basic.rs
runtimes/web/public/: bootstrap.js  index.html
runtimes/web/scripts/: bootstrap.sh  build.rs
runtimes/web/server/: Cargo.toml
runtimes/web/server/src/: dev.rs
runtimes/web/src/: lib.rs  utils.rs
src/: arena.rs  lib.rs  log.rs
src/component/: mod.rs
src/component/x/: mod.rs
src/element/: element.rs  mod.rs
src/event/: event.rs  mod.rs
src/scaffold/: mod.rs  scaffold.rs
src/style/: mod.rs  primitive.rs  property.rs  style.rs
src/surface/: mod.rs  surface.rs
