[package]
name = "slate"
version = "0.1.0"
edition = "2021"

[features]
default = ["layout", "style", "chizel", "bump"]
dev = []
debug = []
verbose = []
inspect = []
profiling = ["tracy-client"]
bump = ["bumpalo", "bumpalo-herd"]
layout = []
style = []
chizel = []
micro = []

[[example]]
name = "slate-alloc"
path = "examples/alloc.rs"

[[example]]
name = "slate-bones"
path = "examples/bones.rs"

[[example]]
name = "slate-styles"
path = "examples/styles.rs"

[[bench]]
name = "allocation"
harness = false

[[bench]]
name = "scaffold"
harness = false

#--
[dependencies]
uuid = { version = "1.6", default-features = false, features = ["v4", "v5"] }
smallvec = { version = "1.13" }
once_cell = { version = "1.19.0", default-features = false, features = ["alloc"] }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }

# Debugging options for the slate runtime.
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["alloc", "ansi", "fmt", "registry", "sharded-slab", "smallvec", "thread_local", "env-filter"] }
tracy-client = { version = "0.17", optional = true }

# Provides improved access-time for the surface element graph
slotmap = { version = "1.0", default-features = false }

# Offers improvided allocation performance for elements, stylesheets,
# and other structures during scaffolding.
bumpalo = { version = "3.16", features = ["allocator_api", "boxed", "collections"], optional = true }
bumpalo-herd = { version = "0.1", optional = true }

# Provides `allocator_api2` HashMap implementation so we can
# do things like building the scaffold with Bumpalo.
hashbrown = { version = "0.14", features = ["nightly"] }
# hashbrown = { version = "0.15.2", features = ["nightly", "allocator-api2"] }
ahash = { version = "0.8", default-features = false }

# Used by the stylesheet implementation for
# faster(?) dynamic dispatch of style properties.
enum_dispatch = { version = "0.3" }

#--
[dependencies.chizel]
path = "./macros/chizel"

[dependencies.chalk]
path = "./macros/chalk"

#--
[dev-dependencies]
anyhow = { version = "1.0" }
criterion = { version = "0.5.1" }

# Used in the allocator example + benchmarks.
# TODO: Can we make these optional?
slab = "0.4"

#--
[patch.crates-io]
# hashbrown = { git = "https://github.com/rust-lang/hashbrown.git", rev = "v0.15.1" }

#--
[workspace]
resolver = "2"
members = [
  "apps/hud",
  "apps/surface",
  "macros/chizel",
  "macros/chalk",
  "runtimes/bevy",
  "runtimes/terminal",
  "runtimes/web",
  "runtimes/godot",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 3 # or "s"
codegen-units = 1
incremental = false
debug = false
