[package]
name = "hud"
version = "0.1.0"
edition = "2021"

#--
default-run = "hud"

[[bin]]
name = "hud"
path = "src/bin/hud.rs"
required-features = ["bevy"]

[[bin]]
name = "service"
path = "src/bin/service.rs"

#--
[features]
default = []
bevy = ["dep:bevy", "dep:bevy-slate"]

#--
[dependencies]

[dependencies.slate]
path = "../../"

[dependencies.bevy]
version = "0.12"
optional = true

[dependencies.bevy-slate]
path = "../../runtimes/bevy"
optional = true
