[package]
name = "slate-hud"
version = "0.1.0"
edition = "2021"

#--
default-run = "slate-hud"

[[bin]]
name = "slate-hud"
path = "src/bin/main.rs"
required-features = ["bevy"]

#--
[features]
default = []
bevy = ["dep:bevy", "dep:bevy-slate"]

#--
[dependencies]

[dependencies.slate]
path = "../../"

[dependencies.bevy]
version = "0.12"
optional = true

[dependencies.bevy-slate]
path = "../../runtimes/bevy"
optional = true
