[package]
name = "slate-hud"
version = "0.1.0"
edition = "2021"
build = "scripts/build.rs"

#--
default-run = "slate-hud"

[[bin]]
name = "slate-hud"
path = "src/main.rs"
required-features = []

#--
[features]
default = []
dev = []
debug = []
verbose = []
terminal = ["bevy-slate/terminal"]

#---
[dependencies]
anyhow = "1.0"
tracing = "0.1.40"
serde = { version = "1.0", features = ["std", "derive"] }

[dependencies.bevy]
version = "0.14"

[dependencies.atlas]
path = "../../../atlas"

[dependencies.slate]
path = "../../"

[dependencies.bevy-slate]
path = "../../runtimes/bevy"

#---
# [target.x86_64-pc-windows-msvc]
# linker = "rust-lld.exe"
# rustflags = ["-Zshare-generics=off"]
