[package]
name = "bevy-slate"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["slate/dev"]
debug = ["slate/debug"]
verbose = ["slate/verbose"]
inspect = ["slate/inspect"]
profiling = ["tracy-client", "slate/profiling"]
# dylink = ["bevy/dynamic_linking"]
terminal = ["dep:ratatui", "dep:crossterm"]

#---
[[example]]
name = "bevy-slate-basic"
path = "examples/basic.rs"

#---
[[example]]
name = "bevy-slate-overlay"
path = "examples/overlay.rs"

#---
[dependencies]
uuid = { version = "1.10", features = ["v4", "v5", "serde", "zerocopy"] }
smallvec = { version = "1.11" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
tracy-client = { version = "0.17", features = ["enable"], optional = true }
crossbeam-channel = { version = "0.5" }
raw-window-handle = { version = "0.6", features = ["alloc", "wasm-bindgen"] }
dpi = { version = "0.1" }

[dependencies.bevy]
version = "0.14"
features = [
    # TODO
]

[dependencies.webview2]
version = "0.1"

[dependencies.ratatui]
version = "*"
optional = true

[dependencies.crossterm]
version = "*"
optional = true

[dependencies.slate]
path = "../../"

[dependencies.chizel]
path = "../../macros/chizel"

[dependencies.oops]
git = "https://github.com/open-dx/oops-rs"

#--
[dev-dependencies]
anyhow = "1.0.75"
winapi = "0.3.9"
