[package]
name = "bevy-slate"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["slate/dev"]
debug = ["slate/debug"]
verbose = ["slate/verbose"]
inspect = ["slate/inspect"]
profiling = ["tracy-client", "slate/profiling"]
# dylink = ["bevy/dynamic_linking"]
terminal = [] # ["slate-terminal"]

#---
[[example]]
name = "bevy-slate-basic"
path = "examples/basic.rs"

#---
[[example]]
name = "bevy-slate-overlay"
path = "examples/overlay.rs"

#---
[dependencies]
uuid = { version = "1.10", features = ["v4", "v5", "serde", "zerocopy"] }
smallvec = { version = "1.11" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.18", features = ["tracing", "env-filter"] }
tracy-client = { version = "0.17", features = ["enable"], optional = true }
crossbeam-channel = { version = "0.5" }
webview2 = { version = "0.1" }
raw-window-handle = { version = "0.6", features = ["alloc", "wasm-bindgen"] }
winapi = { version = "0.3.9" }
dpi = { version = "0.1" }
winit = "0.30.5"

[dependencies.bevy]
version = "0.14"
features = [
    # TODO
]

[dependencies.slate]
path = "../../"

[dependencies.chizel]
path = "../../macros/chizel"

[dependencies.oops]
git = "https://github.com/open-dx/oops-rs"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26" }
objc = { version = "0.2" }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.18" }

#--
[dev-dependencies]
anyhow = { version = "1.0" }
