[package]
name = "terminal-slate"
version = "0.1.0"
edition = "2021"

[features]
default = []
debug = []
verbose = []
inspect = []
raw = []

[[example]]
name = "terminal-slate-basic"
path = "examples/basic.rs"

#--
[dependencies]
smallvec = { version = "1.13" }
tracing = { version = "0.1", features = ["log"] }

[dependencies.crossterm]
version = "0.28"

[dependencies.slate]
path = "../../"

#--
[dev-dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }

[dev-dependencies.chizel]
path = "../../macros/chizel"
