[package]
name = "web-slate"
version = "0.1.0"

authors = ["Lorren Biffin <lorren.biffin@gmail.com>"]
description = "Render Slate UI on the web."
repository = "NONE"
license = "MIT"

edition = "2021"
build = "build/main.rs"

[features]
default = ["console_error_panic_hook"]

#--
[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "web-slate-basic"
path = "examples/basic.rs"

#--
[dependencies]
wasm-bindgen = "0.2.88"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
anyhow = { version = "1.0.75" }
wasm-bindgen-test = "0.3.34"
tokio = { version = "1.33.0", features = ["full"] }
axum = { version = "*", features = ["macros", "ws", "tracing", "headers", "multipart"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
