[package]
name = "web-slate"
version = "0.1.0"
authors = ["Lorren Biffin <lorren.biffin@gmail.com>"]
description = "Render Slate UI on the web."
repository = "NONE"
license = "MIT"
edition = "2021"
build = "scripts/build.rs"

[features]
default = ["recover"]
dev = []
debug = []
verbose = []
inspect = []
recover = ["console_error_panic_hook"]

#--
[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "web-slate-basic"
path = "examples/basic.rs"

#--
[dependencies]
wasm-bindgen = { version = "0.2.88" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

tracing = { version = "0.1.41", default-features = false, features = ["attributes", "tracing-attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["alloc", "ansi", "fmt", "registry", "sharded-slab", "smallvec", "thread_local", "tracing-log"] }

[dependencies.oops]
git = "https://github.com/open-dx/oops-rs"

[dev-dependencies]
anyhow = { version = "1.0" }
wasm-bindgen-test = { version = "0.3" }
tokio = { version = "1.33", features = ["full"] }
axum = { version = "0.7", features = ["macros", "ws", "tracing", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

[dev-dependencies.web-slate-server]
path = "./server"

[dev-dependencies.slate]
path = "../../"
