[package]
name = "web-slate-server"
version = "0.1.0"
authors = ["Lorren Biffin <lorren.biffin@gmail.com>"]
description = "Serve Slate web applications."
repository = "NONE"
license = "MIT"
edition = "2021"

[features]
default = []
dev = []
debug = []
verbose = []
inspect = []

#--
[lib]
crate-type = ["cdylib", "rlib"]

#--
[dependencies]
tracing = { version = "0.1.41", default-features = false, features = ["attributes", "tracing-attributes"] }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["alloc", "ansi", "fmt", "registry", "sharded-slab", "smallvec", "thread_local", "tracing-log"] }

tokio = { version = "1.33", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
axum = { version = "0.7", features = ["macros", "ws", "tracing", "multipart"] }

[dependencies.oops]
git = "https://github.com/open-dx/oops-rs"

[dev-dependencies.slate]
path = "../../../"

[dev-dependencies]
anyhow = { version = "1.0" }
